[AB-xxx] adding support for user installable apps to varying commands